# mask

./: .gitignore  LICENSE  README.md  main.py  masker.py  pyproject.toml  requirements.txt  setup.cfg
examples/: blank_config.json  blank_instruction_set.json
examples/mssql/: mssql_config.json
mask/: masker.py
mask/configuration/: operations.py
mask/database/: database_gateway.py  database_gateway_factory.py  mssql_database_gateway.py  postgres_database_gateway.py
mask/rules/: command_rules.py  data_rules.py  database_object_rules.py  rules_factory.py
mask/utilities/: file.py
src/mask/: file.py
src/mask/config/: constants.py  operations.py
src/mask/database/: database_context.py  database_gateway.py  mssql_database_gateway.py  postgres_database_gateway.py
src/mask/database_access/: database_gateway.py
src/mask/rules/: command_rules.py  data_rules.py  database_object_rules.py  rule.py  rules_factory.py
