[metadata]
name = mask
description = A data masking utility for relational database management systems
author = Nick Tippie
license = MIT
license_file = LICENSE
platforms = win32, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = mask
install_requires = pymssql>=2
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
mask = py.type

[flake8]
max-line-length = 160